// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid can show overflow or hide it 1`] = `
<div
  className="css-1mo6rv1"
>
  <div
    className="css-bq8tod"
  >
    <div
      className="css-10185dy"
      justify="flex-start"
    >
      <div
        className="css-4u2s8l"
        s="var(--grid-colcount)"
        suppressHydrationWarning={true}
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid can show overflow or hide it 2`] = `
<div
  className="css-1mo6rv1"
>
  <div
    className="css-1dh5pml"
  >
    <div
      className="css-bq8tod"
    >
      <div
        className="css-10185dy"
        justify="flex-start"
      >
        <div
          className="css-4u2s8l"
          s="var(--grid-colcount)"
          suppressHydrationWarning={true}
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;
